# learning

./: README.md
android-rust/: Cargo.toml
android-rust/src/: lib.rs
c/: .gitignore  CMakeLists.txt  README.md  TestHashMap.c  config.h.in
c/basic/: CMakeLists.txt  args.c  array-pointer-2.c  array-pointer.c  array.c  assert.c  bitfield.c  cmd.c  cond.c  enum.c  error.c  extern-1.c  extern-2.c  extern.c  file.c  for.c  io.c  limits.c  locale.c  localeconv.c  loop.c  ls_files.c  malloc-free.c  math.c  max.c  plus.c  pointer-array.c  pointer-func-2.c  pointer-func.c  pointer-pointer.c  pointer.c  preprocessor.c  printf.c  progress.c  raise.c  randomAccess.c  randomAccess.h  regex.c  setjmp.c  stddef.c  (+11 more)
c/practice/: CMakeLists.txt
cpp/: .gitignore  CMakeLists.txt
cpp/array/: CMakeLists.txt  array.cpp
cpp/box/: CMakeLists.txt  box.cpp  box.h
cpp/collection/: CMakeLists.txt
cpp/dijkstra/: CMakeLists.txt  dijkstra.cpp
cpp/dynamem/: CMakeLists.txt  dynamem.cpp
cpp/enum/: CMakeLists.txt  enum.cpp
cpp/extend/: CMakeLists.txt  extend.cpp
cpp/friend/: CMakeLists.txt  friend.cpp
cpp/io/: CMakeLists.txt  io.cpp
cpp/move/: CMakeLists.txt  move.cpp
cpp/multifile/: CMakeLists.txt  multifile.cpp
cpp/object/: Box.cpp  Box.h  CMakeLists.txt  object.cpp
cpp/polymorphism/: CMakeLists.txt  polymorphism.cpp
cpp/size/: CMakeLists.txt  size.cpp
cpp/smart-ptr/: CMakeLists.txt  smart-ptr.cpp
cpp/smtptr/: CMakeLists.txt  main.cpp  smtptr.cpp  smtptr.h
cpp/string/: CMakeLists.txt  string.cpp
cpp/template/: CMakeLists.txt  template.cpp
cpp/vector/: CMakeLists.txt  vector.cpp
embedded/blinky/: .gitignore  Cargo.toml  README.md
embedded/blinky/.cargo/: config
embedded/blinky/src/: main.rs
embedded/interrupt/: Cargo.toml  layout.ld
embedded/interrupt/.cargo/: config
embedded/interrupt/src/: led.rs  main.rs  startup.rs
rust/: .gitignore  Cargo.toml
rust/advanced_macro/advanced_macro_derive/: Cargo.toml
rust/advanced_macro/advanced_macro_derive/src/: lib.rs
rust/advanced_macro/src/: lib.rs
rust/advanced_macro_pancakes/: Cargo.toml
rust/advanced_macro_pancakes/src/: main.rs
rust/advanced_type/: Cargo.toml
rust/advanced_type/src/: lib.rs
rust/advanced_unsafe/: Cargo.toml
rust/advanced_unsafe/src/: function.rs  lib.rs  pointer.rs
rust/async_demo/: Cargo.toml
rust/async_demo/src/: lib.rs
rust/blog/src/: blog.rs  main.rs
rust/blog2/: Cargo.toml
rust/boxdemo/src/: lib.rs
rust/cargo/: Cargo.toml
rust/cargo/src/: lib.rs
rust/cargo2/src/: main.rs
rust/closure/: Cargo.toml
rust/closure/src/: advanced.rs  main.rs
rust/collection/: Cargo.toml
rust/collection/src/: hashmap_demo.rs  main.rs  string_demo.rs  vec_demo.rs
rust/concurrency/: Cargo.toml
rust/concurrency/src/: channel.rs  lib.rs  mutex.rs
rust/demo/advanced_macro/: Cargo.toml
rust/demo/advanced_macro/src/: lib.rs
rust/demo/advanced_unsafe/src/: pointer.rs
rust/demo/amap/: Cargo.toml
rust/demo/amap/src/: main.rs
rust/demo/blog/: Cargo.toml
rust/demo/blog/src/: blog.rs
rust/demo/boxdemo/: Cargo.toml
rust/demo/cargo/: Cargo.toml
rust/demo/cargo/src/: lib.rs
rust/demo/cargo2/: Cargo.toml
rust/demo/closure/src/: advanced.rs  main.rs
rust/demo/collection/src/: main.rs  string_demo.rs
rust/demo/concurrency/src/: thread.rs
rust/demo/diesel_demo/: .env  Cargo.toml
rust/demo/diesel_demo/src/: lib.rs
rust/demo/error/: Cargo.toml
rust/demo/error/src/: main.rs  result_demo.rs
rust/demo/ffi/fromc/: Cargo.toml
rust/demo/ffi/toc/: Cargo.toml
rust/demo/generic/: Cargo.toml
rust/demo/generic/src/: demo1.rs
rust/demo/grep/: Cargo.toml
rust/demo/grep/src/: main.rs
rust/demo/guess/: Cargo.toml
rust/demo/gui/src/: lib.rs
rust/demo/iterator/: Cargo.toml
rust/demo/iterator/src/: audio.rs  counter.rs  lib.rs
rust/demo/lifetime/src/: main.rs
rust/demo/module/src/: main.rs
rust/demo/ownership/: Cargo.toml
rust/demo/pattern/src/: let_assign.rs  lib.rs  match_demo.rs
rust/demo/qqmap/: Cargo.toml
rust/demo/qqmap/src/: main.rs
rust/demo/rc/: Cargo.toml
rust/demo/rc/src/: lib.rs
rust/demo/refcell/src/: lib.rs
rust/demo/serialize/: Cargo.toml
rust/demo/test_demo/src/: lib.rs
rust/demo/traits/: Cargo.toml
rust/demo/traits/src/: samename.rs
rust/demo/webserver_demo/: Cargo.toml
rust/demo/webserver_demo/src/: lib.rs  single_thread.rs
rust/deref/: Cargo.toml
rust/deref/src/: lib.rs
rust/diesel_demo/: db.sqlite
rust/diesel_demo/src/: lib.rs
rust/docker/: docker-compose.yml
rust/drop/: Cargo.toml
rust/drop/src/: main.rs
rust/error/: Cargo.toml
rust/error/src/: main.rs  panic_demo.rs  result_demo.rs
rust/ffi/fromc/src/: Makefile  build.rs  hello.c  hello_dynamic.c  hello_static.c  main.rs
rust/ffi/toc/: Cargo.toml
rust/ffi/toc/src/: Makefile  ccall.c
rust/generic/src/: demo1.rs  demo2.rs  main.rs
rust/grep/src/: lib.rs  main.rs
rust/gui/: Cargo.toml
rust/iterator/src/: lib.rs
rust/lifetime/: Cargo.toml
rust/lifetime/src/: lifetime.rs  main.rs
rust/module/: Cargo.toml
rust/module/src/front_of_house/: mod.rs
rust/ownership/src/: main.rs
rust/pattern/: Cargo.toml
rust/pattern/src/: for_match.rs  if_let.rs  let_assign.rs  let_fn.rs  lib.rs  match_demo.rs  while_let.rs
rust/rc/src/: lib.rs
rust/refcell/: Cargo.toml
rust/refcell/src/: lib.rs
rust/refcycle/: Cargo.toml
rust/refcycle/src/: lib.rs  rc_refcell.rs  weak.rs
rust/script/: buildall.sh
rust/src/: guess.rs  main.rs
rust/tax2019/: Cargo.toml
rust/tax2019/src/: main.rs
rust/test_demo/: Cargo.toml
rust/tool/: Cargo.toml
rust/tool/hmby/: Cargo.toml
rust/tool/javaparser/: Cargo.toml
rust/tool/javaparser/src/: main.rs  meta.rs  parser.rs  render.rs
rust/tool/sqlgen_code_name/: Cargo.toml
rust/tool/sqlgen_code_name/src/: main.rs
rust/tool/sqlgen_simple_dml/: Cargo.toml
rust/tool/sqlgen_simple_dml/src/: main.rs
rust/traits/src/: add_overload.rs  advanced.rs  associate.rs  bound.rs  main.rs  newtype.rs
rust/webserver_demo/doc/: demo.http
rust/webserver_demo/src/: concurrency.rs  lib.rs  main.rs
(+632 files in other folders)
