cmake_minimum_required(VERSION 2.8)

project(learning_cpp)

set(CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_subdirectory(array)
add_subdirectory(box)
add_subdirectory(collection)
add_subdirectory(dijkstra)
add_subdirectory(dynamem)
add_subdirectory(enum)
add_subdirectory(extend)
add_subdirectory(friend)
add_subdirectory(io)
add_subdirectory(move)
add_subdirectory(multifile)
add_subdirectory(object)
add_subdirectory(polymorphism)
add_subdirectory(size)
add_subdirectory(smart-ptr)
add_subdirectory(smtptr)
add_subdirectory(string)
add_subdirectory(template)
add_subdirectory(vector)