[workspace]
members = [
'guess',
'ownership',
'module',
'collection',
'error',
'generic',
'traits',
'lifetime',
'test_demo',
'grep',
'closure',
'iterator',
'cargo',
'cargo2',
'boxdemo',
'deref',
'drop',
'rc',
'refcell',
'refcycle',
'concurrency',
'gui',
'blog',
'blog2',
'pattern',
'advanced_unsafe'
]


[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'

