[workspace]
members = [
'guess',
'ownership',
'module',
'collection',
'error',
'generic',
'traits',
'lifetime',
'test_demo',
'grep',
'closure',
'iterator',
'cargo',
'cargo2',
'boxdemo',
'deref',
'drop',
'rc',
'refcell',
'refcycle',
'concurrency',
'gui',
'blog',
'blog2',
'pattern',
'advanced_unsafe',
'advanced_type',
'advanced_macro',
'advanced_macro/advanced_macro_derive',
'advanced_macro_pancakes',
'webserver_demo',
'async_demo',
'tax2019'
]


[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'

