[workspace]
members = [
    #'demo/guess',
    #'demo/ownership',
    #'demo/module',
    #'demo/collection',
    #'demo/error',
    #'demo/generic',
    #'demo/traits',
    #'demo/lifetime',
    #'demo/test_demo',
    #'demo/grep',
    #'demo/closure',
    #'demo/iterator',
    #'demo/cargo',
    #'demo/cargo2',
    #'demo/boxdemo',
    #'demo/deref',
    #'demo/drop',
    #'demo/rc',
    #'demo/refcell',
    #'demo/refcycle',
    #'demo/concurrency',
    #'demo/gui',
    'demo/blog',
    #'demo/blog2',
    #'demo/pattern',
    #'demo/advanced_unsafe',
    #'demo/advanced_type',
    #'demo/advanced_macro',
    #'demo/advanced_macro/advanced_macro_derive',
    #'demo/advanced_macro_pancakes',
    #'demo/webserver_demo',
    #'demo/async_demo',
    'tool/tax2019',
    #'demo/diesel_demo',
    #'demo/serialize',
    'tool/javaparser',
    'tool/hmby',
    'tool/sqlgen_code_name',
    'tool/sqlgen_simple_dml'
]


[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'

