add_library(basic
        args.c
        array.c
        array-pointer.c
        array-pointer-2.c
        assert.c
        bitfield.c
        cmd.c
        cond.c
        enum.c
        error.c
        extern.c
        extern-1.c
        extern-2.c
        file.c
        for.c
        helloword.c
        io.c
        limits.c
        locale.c
        localeconv.c
        loop.c
        ls_files.c
        malloc-free.c
        math.c
        max.c
#        mysql.c
        plus.c
        pointer.c
        pointer-array.c
        pointer-func.c
        pointer-func-2.c
        pointer-pointer.c
        preprocessor.c
        printf.c
#        progress.c
        raise.c
        randomAccess.h
        randomAccess.c
#        regex.c
        setjmp.c
        signal.c
        sizeof.c
        stddef.c
        string.c
        string-pointer.c
        struct.c
        struct-pointer.c
        sum.c
        swap.c
        switch.c
        time.c
        typedef.c
        union.c
        variable.c
        )