[package]
name = "blinky"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.8"        # cortex-m 核心指令集
cortex-m-rt = "0.6.5"     # 最小运行时，负责启动内存初始化
panic-halt = "0.2.0"      # 定义发生 panic 时采取立即停机的行为