[package]
name = "interrupt"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5"
# Gives us access to the STM32F1 registers
stm32f1 = {version = "0.11.0", features = ["stm32f103", "rt"]}