[package]
name = "qqmap"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
reqwest = { version = "0.10.8", features = ["blocking"] }
json = "0.12.4"
md5 = "0.7.0"
itertools = "0.10.0"